--- a/config
+++ b/config
@@ -1,9 +1,10 @@
 # i3 config file (v4)
-#
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
-# requirements:
-# - https://github.com/acrisci/playerctl/releases
-# - 
+
+# TODO: audio based on possebilities, not hard coded.
+# black background and then commit and push
+# led of volume mute working
+#brightness
+# volume up = unmute
 
 # super key
 set $mod Mod4 
@@ -35,6 +36,11 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+
+#set background
+exec --no-startup-id xsetroot -solid "#000000"
+#auto-mute
+exec --no-startup-id pactl set-sink-mute 0 o
 
 # kill focused window
 bindsym $mod+w kill
@@ -223,12 +229,12 @@ bar {
 }
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
-bindsym $mod2+button4 exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
-bindsym $mod2+button5 --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
+bindsym $mod2+button4 exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym $mod2+button5 --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 
 # Media player controls
 #bindcode 164 exec --no-startup-id playerctl play-pause
@@ -236,6 +242,8 @@ bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
 bindsym XF86AudioNext exec --no-startup-id playerctl next
 bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
+bindsym XF86MonBrightnessUp exec --no-startup-id "echo 1500 | tee /sys/class/backlight/intel_backlight/brightness"
+bindsym XF86MonBrightnessDown exec --no-startup-id "echo 400 | tee /sys/class/backlight/intel_backlight/brightness" 
 # border / titlebar
 new_window none
 hide_edge_borders both
