--- a/config
+++ b/config
@@ -16,8 +16,8 @@ set $mod2 Mod1
 # ctrl
 # Tab
 
-set $primary eDP
-set $secondary VGA-0
+set $primary eDP-1
+set $secondary DP-2
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -225,11 +225,11 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
 	status_command i3status
-	mode hide
+	mode dock
 	tray_output none
 	modifier $mod
-	bindsym button1 nop
-	#workspace_buttons no
+	#bindsym button1 nop
+	#workspace_buttons yes
 }
 
 # Pulse Audio controls
